--- a/index.html
+++ b/index.html
@@ -6,65 +6,168 @@
   <title>Kyara Beverages</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="images/logo.png" />
+
+  <!-- SEO & Social Meta -->
+  <meta name="description" content="Kyara Beverages – Millet-based, healthy fruit drinks that are bold, natural, and innovative.">
+  <meta name="keywords" content="Kyara, beverages, millet drinks, healthy juice, fruit-based drinks, organic, startup">
+  <meta name="author" content="Kyara Beverages">
+  <meta property="og:title" content="Kyara Beverages – Refreshment, Reimagined">
+  <meta property="og:description" content="Discover bold, millet-based drinks crafted from tradition and powered by innovation.">
+  <meta property="og:image" content="images/logo.png">
+  <meta property="og:type" content="website">
+
+  <style>
+    html { scroll-behavior: smooth; }
+    @keyframes subtle-float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
+    @keyframes fade-in-up { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
+    @keyframes slide-in-left { from { opacity: 0; transform: translateX(-50px); } to { opacity: 1; transform: translateX(0); } }
+    @keyframes slide-in-right { from { opacity: 0; transform: translateX(50px); } to { opacity: 1; transform: translateX(0); } }
+    @keyframes scale-in { from { transform: scale(0.95); opacity: 0; } to { transform: scale(1); opacity: 1; } }
+    @keyframes gradient-shift { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
+
+    .animate-float { animation: subtle-float 4s ease-in-out infinite; }
+    .animate-slide-in-left { animation: slide-in-left 0.8s ease-out forwards; }
+    .animate-slide-in-right { animation: slide-in-right 0.8s ease-out forwards; }
+    .animate-fade-in-up { animation: fade-in-up 0.8s ease-out forwards; }
+    .animate-scale-in { animation: scale-in 0.8s ease-out forwards; }
+    .gradient-bg { background: linear-gradient(-45deg, #1a472a, #2d5a27, #3d7a3d, #4a9e4a); background-size: 400% 400%; animation: gradient-shift 20s ease infinite; }
+    .parallax { background-attachment: fixed; background-size: cover; background-position: center; }
+
+    .product-card {
+      transition: all 0.5s ease;
+      transform: translateY(30px);
+      opacity: 0;
+    }
+
+    .product-card.active {
+      transform: translateY(0);
+      opacity: 1;
+    }
+
+    .product-image-container {
+      aspect-ratio: 3/4;
+      background-color: #f8f8f8;
+      border-radius: 1rem;
+      overflow: hidden;
+    }
+
+    .product-image {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      padding: 1rem;
+      transition: transform 0.4s ease;
+    }
+
+    .product-card:hover .product-image {
+      transform: scale(1.05);
+    }
+
+    .form-input:focus {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+    }
+  </style>
 </head>
-<body class="font-sans bg-white text-gray-800">
+<body class="font-sans bg-gray-50 text-gray-800">
 
   <!-- Hero Section -->
-  <section class="relative h-screen bg-cover bg-center" style="background-image: url('images/hero.jpg');">
-    <div class="absolute inset-0 bg-gradient-to-r from-green-800/60 to-transparent"></div>
+  <section class="relative h-screen parallax" style="background-image: url('images/hero.jpg');">
+    <div class="absolute inset-0 bg-gradient-to-r from-green-900/80 to-black/60"></div>
     <div class="relative z-10 flex flex-col justify-center items-center text-center h-full px-4">
-      <img src="images/logo.png" alt="Kyara Logo" class="w-24 md:w-32 mb-6 drop-shadow-lg">
-      <h1 class="text-4xl md:text-6xl font-extrabold text-white drop-shadow">Refreshment, Reimagined</h1>
-      <p class="mt-4 text-lg md:text-xl text-white max-w-xl drop-shadow">Rooted in tradition, powered by innovation — experience the next wave of healthy refreshment.</p>
+      <div class="mb-8 animate-float">
+        <img src="images/logo.png" alt="Kyara Beverages Logo" role="img" aria-label="Kyara Logo" class="w-40 md:w-64 lg:w-72 drop-shadow-lg">
+      </div>
+      <h1 class="text-5xl md:text-7xl font-extrabold text-white drop-shadow-lg animate-slide-in-left">Refreshment, Reimagined</h1>
+      <p class="mt-6 text-xl md:text-2xl text-white max-w-2xl drop-shadow animate-slide-in-right">Healthy, vibrant drinks made from tradition and innovation — only at Kyara.</p>
     </div>
   </section>
 
   <!-- About Section -->
-  <section class="py-16 bg-white text-center px-6">
-    <h2 class="text-3xl font-bold mb-4 text-green-700">Our Mission</h2>
-    <p class="max-w-3xl mx-auto text-lg text-gray-600">
-      At <strong>Kyara Beverages</strong>, we blend the richness of ancient grains with the zest of modern fruits.
-      Our millet-based drinks aren't just tasty—they're a movement toward sustainable, healthy living.
-    </p>
+  <section id="about" class="py-20 bg-white text-center px-6">
+    <div class="max-w-4xl mx-auto">
+      <h2 class="text-4xl font-bold mb-6 text-green-800 animate-fade-in-up">Our Mission</h2>
+      <p class="text-xl text-gray-600 leading-relaxed animate-fade-in-up">
+        At <strong>Kyara Beverages</strong>, we're blending the earthiness of millet with the zest of modern fruits.
+        Our drinks aren't just beverages—they're bold, health-forward experiences that respect tradition.
+      </p>
+    </div>
   </section>
 
-  <!-- Products Section -->
-  <section class="py-16 bg-gray-50 px-6">
-    <h2 class="text-3xl font-bold text-center mb-10 text-green-700">Discover Our Flavors</h2>
-    <div class="grid gap-8 md:grid-cols-3">
-      <div class="bg-white rounded-xl shadow-lg hover:shadow-xl transition p-6 text-center">
-        <img src="images/drink1.jpg" alt="SunBerry" class="w-full h-48 object-cover rounded-lg mb-4">
-        <h3 class="text-xl font-semibold text-green-800">🌞 SunBerry</h3>
-        <p class="text-gray-600">Strawberry and millet harmony in every sip.</p>
-      </div>
-      <div class="bg-white rounded-xl shadow-lg hover:shadow-xl transition p-6 text-center">
-        <img src="images/drink2.jpg" alt="CitrusGlow" class="w-full h-48 object-cover rounded-lg mb-4">
-        <h3 class="text-xl font-semibold text-green-800">🍊 CitrusGlow</h3>
-        <p class="text-gray-600">Zesty citrus with a golden millet twist.</p>
-      </div>
-      <div class="bg-white rounded-xl shadow-lg hover:shadow-xl transition p-6 text-center">
-        <img src="images/drink3.jpg" alt="TropicalChill" class="w-full h-48 object-cover rounded-lg mb-4">
-        <h3 class="text-xl font-semibold text-green-800">🌴 TropicalChill</h3>
-        <p class="text-gray-600">Mango, pineapple, and chill millet magic.</p>
+  <!-- Product Section -->
+  <section class="py-20 gradient-bg px-6">
+    <div class="max-w-7xl mx-auto">
+      <h2 class="text-4xl font-bold text-center mb-12 text-white animate-fade-in-up">Discover Our Flavors</h2>
+      <div class="grid gap-12 md:grid-cols-3">
+        <!-- Drink 1 -->
+        <div class="product-card bg-white rounded-2xl p-8 text-center shadow-lg">
+          <div class="product-image-container mb-6">
+            <picture>
+              <source srcset="images/drink1.webp" type="image/webp">
+              <img src="images/drink1.jpg" alt="SunBerry" class="product-image" aria-label="SunBerry">
+            </picture>
+          </div>
+          <h3 class="text-2xl font-semibold text-green-800 mb-2">🌞 SunBerry</h3>
+          <p class="text-gray-600">Strawberry and millet harmony in every sip.</p>
+        </div>
+        <!-- Drink 2 -->
+        <div class="product-card bg-white rounded-2xl p-8 text-center shadow-lg">
+          <div class="product-image-container mb-6">
+            <picture>
+              <source srcset="images/drink2.webp" type="image/webp">
+              <img src="images/drink2.jpg" alt="CitrusGlow" class="product-image" aria-label="CitrusGlow">
+            </picture>
+          </div>
+          <h3 class="text-2xl font-semibold text-green-800 mb-2">🍊 CitrusGlow</h3>
+          <p class="text-gray-600">Zesty citrus with a golden millet twist.</p>
+        </div>
+        <!-- Drink 3 -->
+        <div class="product-card bg-white rounded-2xl p-8 text-center shadow-lg">
+          <div class="product-image-container mb-6">
+            <picture>
+              <source srcset="images/drink3.webp" type="image/webp">
+              <img src="images/drink3.jpg" alt="TropicalChill" class="product-image" aria-label="TropicalChill">
+            </picture>
+          </div>
+          <h3 class="text-2xl font-semibold text-green-800 mb-2">🌴 TropicalChill</h3>
+          <p class="text-gray-600">Mango, pineapple, and chill millet magic.</p>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section class="py-16 bg-white px-6">
-    <h2 class="text-3xl font-bold text-center mb-6 text-green-700">Get in Touch</h2>
-    <form class="max-w-xl mx-auto bg-gray-50 p-6 rounded-xl shadow-md space-y-4">
-      <input type="text" placeholder="Your Name" class="w-full border border-gray-300 p-3 rounded focus:outline-none focus:ring-2 focus:ring-green-500">
-      <input type="email" placeholder="Your Email" class="w-full border border-gray-300 p-3 rounded focus:outline-none focus:ring-2 focus:ring-green-500">
-      <textarea placeholder="Your Message" class="w-full border border-gray-300 p-3 rounded h-32 resize-none focus:outline-none focus:ring-2 focus:ring-green-500"></textarea>
-      <button type="submit" class="w-full bg-green-700 text-white py-3 rounded hover:bg-green-800 transition">Send Message</button>
-    </form>
+  <section class="py-20 bg-white px-6">
+    <div class="max-w-2xl mx-auto">
+      <h2 class="text-4xl font-bold text-center mb-8 text-green-800 animate-fade-in-up">Get in Touch</h2>
+      <form class="bg-gray-50 p-8 rounded-2xl shadow-lg space-y-6 animate-scale-in">
+        <input type="text" aria-label="Your Name" placeholder="Your Name" class="form-input w-full border border-gray-300 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-green-500">
+        <input type="email" aria-label="Your Email" placeholder="Your Email" class="form-input w-full border border-gray-300 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-green-500">
+        <textarea aria-label="Your Message" placeholder="Your Message" class="form-input w-full border border-gray-300 p-4 rounded-xl h-40 resize-none focus:outline-none focus:ring-2 focus:ring-green-500"></textarea>
+        <button type="submit" class="w-full bg-green-700 text-white py-4 rounded-xl hover:bg-green-800 text-lg font-semibold">Send Message</button>
+      </form>
+    </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-green-800 text-white text-center py-4">
-    <p>&copy; 2025 Kyara Beverages. All rights reserved.</p>
+  <footer class="bg-green-900 text-white text-center py-8">
+    <p class="text-lg">&copy; 2025 Kyara Beverages. All rights reserved.</p>
   </footer>
+
+  <!-- Reveal on scroll -->
+  <script>
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('active');
+        }
+      });
+    }, {
+      threshold: 0.1
+    });
+
+    document.querySelectorAll('.product-card').forEach(card => observer.observe(card));
+  </script>
 
 </body>
 </html>
