--- a/index.html
+++ b/index.html
@@ -45,15 +45,21 @@
     }
 
     .product-image-container {
-      aspect-ratio: 3/4;
+      position: relative;
+      width: 100%;
+      height: 400px;
       background-color: #f8f8f8;
       border-radius: 1rem;
       overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .product-image {
-      width: 100%;
+      width: auto;
       height: 100%;
+      max-width: 100%;
       object-fit: contain;
       padding: 1rem;
       transition: transform 0.4s ease;
@@ -102,10 +108,7 @@
         <!-- Drink 1 -->
         <div class="product-card bg-white rounded-2xl p-8 text-center shadow-lg">
           <div class="product-image-container mb-6">
-            <picture>
-              <source srcset="images/drink1.webp" type="image/webp">
-              <img src="images/drink1.jpg" alt="SunBerry" class="product-image" aria-label="SunBerry">
-            </picture>
+            <img src="images/drink1.jpg" alt="SunBerry" class="product-image" loading="lazy">
           </div>
           <h3 class="text-2xl font-semibold text-green-800 mb-2">🌞 SunBerry</h3>
           <p class="text-gray-600">Strawberry and millet harmony in every sip.</p>
@@ -113,10 +116,7 @@
         <!-- Drink 2 -->
         <div class="product-card bg-white rounded-2xl p-8 text-center shadow-lg">
           <div class="product-image-container mb-6">
-            <picture>
-              <source srcset="images/drink2.webp" type="image/webp">
-              <img src="images/drink2.jpg" alt="CitrusGlow" class="product-image" aria-label="CitrusGlow">
-            </picture>
+            <img src="images/drink2.jpg" alt="CitrusGlow" class="product-image" loading="lazy">
           </div>
           <h3 class="text-2xl font-semibold text-green-800 mb-2">🍊 CitrusGlow</h3>
           <p class="text-gray-600">Zesty citrus with a golden millet twist.</p>
@@ -124,10 +124,7 @@
         <!-- Drink 3 -->
         <div class="product-card bg-white rounded-2xl p-8 text-center shadow-lg">
           <div class="product-image-container mb-6">
-            <picture>
-              <source srcset="images/drink3.webp" type="image/webp">
-              <img src="images/drink3.jpg" alt="TropicalChill" class="product-image" aria-label="TropicalChill">
-            </picture>
+            <img src="images/drink3.jpg" alt="TropicalChill" class="product-image" loading="lazy">
           </div>
           <h3 class="text-2xl font-semibold text-green-800 mb-2">🌴 TropicalChill</h3>
           <p class="text-gray-600">Mango, pineapple, and chill millet magic.</p>
